# meshtastic-ui-why-m2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bigapp.csv  link_components.sh  sdkconfig  sdkconfig.old  tag_release.sh
.github/workflows/: build_why_m2.yml  deploy_pages.yml
components/ArduinoThread/: CMakeLists.txt  StaticThreadController.h  Thread.cpp  Thread.h  ThreadController.cpp  ThreadController.h
components/DeviceUI/: CMakeLists.txt  drivers  generated  include  locale  maps  portduino  resources  source  src  studio
components/MeshtasticProtobuf/: CMakeLists.txt  README.md  lib  protobufs  regenerate_protobufs.sh
components/MeshtasticStandalone/: CMakeLists.txt  README.md
components/MeshtasticStandalone/lib/: log
components/SdFat/: BufferedPrint.h  CMakeLists.txt  DigitalIO  ExFatLib  FatLib  FreeStack.cpp  FreeStack.h  FsLib  MinimumSerial.cpp  MinimumSerial.h  RingBuf.h  SdCard  SdFat.h  SdFatConfig.h  SdFatDebugConfig.h  SpiDriver  common  iostream  sdios.h
components/nanopb/: pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
main/: 3rdparty  CMakeLists.txt  c6_fw_flasher.cpp  get_firmware.sh  graphics.c  graphics.h  hello_world_main.c  idf_component.yml  main.cpp  meshtastic_fw_version  src  st7703.h
web-flasher/: index.html  main.css  markdown-styles.css
